# socotra-datamart-reports

./: .gitignore  CHANGES.md  README.md  build_reports.py  main.py  pyproject.toml  requirements.txt  setup.cfg  sync_interface.py  tox.ini
reports/: README.md
reports/lib/: platform_on_risk_report.py  transaction_financial_impact_report.py
reports/lib/common/: get_flattened_fields.py  queries.py
sample_queries/: basic_queries.sql
src/socotra_datamart_reports/: __init__.py  extract_all_policies_report.py  extract_financial_transactions_report.py  extract_on_risk_report.py  platform_all_policies_report.py  platform_financial_transactions_report.py  platform_on_risk_report.py  report_engine.py  transaction_financial_impact_report.py
src/socotra_datamart_reports/extracts/: all_policies.py  all_quotes.py  all_quotes.sql  all_transactions.py  all_transactions.sql  billing.py  billing.sql  claims_created.py  claims_created.sql  current_policy_perils.py  current_policy_perils.sql  current_quote_perils.py  current_quote_perils.sql  policy_transactions.py  premium_earned_unearned.py  premium_earned_unearned.sql
src/socotra_datamart_reports/lib/: base_report.py  get_flattened_fields.py  queries.py  queries_extract.py  queries_platform.py  utils.py
tests/: test_flattened_fields.py  test_platform_financial_transactions_report.py
