[metadata]
name = socotra-datamart-reports
version = 0.0.2
url = https://docs.socotra.com/production/data/datamartguide.html
author_email = "Mark Szymanski" <mark.szymanski@socotra.com>
description = Convenience functions for typical reports run against Socotra Data Mart
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
install_requires =
    mysql-connector-python>=8.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = test

